# odspatialmaps

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: p01_plot_cmems_monthly_windstress.ipynb
src/odspatialmaps/: download.py  plot.py
src/odspatialmaps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
