[metadata]
name = odspatialmaps
author = William Edge
author_email = william.edge@uwa.edu.au
description = Python package for basic maps of model outputs (CMEMS).
license = BSD-3-Clause
long_description_content_type = text/markdown
url = https://github.com/williamedge/odspatialmaps
project_urls =
    Bug Tracker = https://github.com/williamedge/odspatialmaps/issues
    Changelog = https://github.com/williamedge/odspatialmaps/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
	pandas
    xarray
    matplotlib
    cmocean
	notebook
	ipykernel
	ipywidgets
	copernicusmarine
	cartopy


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    odspatialmaps = odspatialmaps.app:entry_point